--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,6 +26,7 @@ repos:
     rev: 0.0.2
     hooks:
       - id: shell-lint
+        exclude: template|\.template$
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.32.2
     hooks:
@@ -51,9 +52,9 @@ repos:
     hooks:
       - id: checkov
         verbose: true
-        entry: checkov -d example/examplea
+        entry: checkov -d example/examplea --external-checks-dir checkov --download-external-modules true
   - repo: https://github.com/jameswoolfenden/pike
-    rev: v0.2.26
+    rev: v0.1.59
     hooks:
       - id: pike-docs-go
-        args: ["-i", "-d", ".", "readme"]
+        args: ["readme", "-i", "-d", "."]
