--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,13 +1,22 @@
 ---
 # yamllint disable rule:line-length
-name: pull_request
-on: pull_request
+name: Pull Request
+on:
+  pull_request:
+  workflow_dispatch:
+
 env:
-  terraform: 0.14.5
+  terraform: 1.3.0
   tf_target_dir: example/examplea
 
 jobs:
   terraform:
+    env:
+      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Do not change
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -27,6 +36,7 @@ jobs:
           tf_actions_version: ${{ env.terraform }}
           tf_actions_subcommand: validate
           tf_actions_working_dir: ${{ env.tf_target_dir }}
+
   security:
     runs-on: ubuntu-latest
     steps:
@@ -38,4 +48,11 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.8
+      - run: |
+          pip3 install lastversion
+          lastversion terraform-docs --assets -d --verbose
+          mkdir $GITHUB_WORKSPACE/bin
+          tar -xvf terraform-docs*.tar.gz --directory $GITHUB_WORKSPACE/bin
+          chmod +x $GITHUB_WORKSPACE/bin/terraform-docs
+          echo "$GITHUB_WORKSPACE/bin" >> $GITHUB_PATH
       - uses: pre-commit/action@v2.0.0
